Fix text alignment

--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 * {
-    text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-style: italic;}
-
+}
+h1, h2, #title, .pic, p {
+    text-align: center;
+}
 #title {
     font-size: 80px;
+}
+
+h1 {
     font-weight: bold;
     background-color: rgb(245, 149, 120);
+    font-size: 48px;
 }
-p {
-    font-size: 24px;
+h2 {
+    font-size: 30px;
 }
+
 .fajitas-pic {
     width: 600px;
     height: auto;
